# rusty_dashed

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
examples/: .dashboard.rs.swp  dashboard.rs
graphs/: test1.css  test1.js  test2.css  test2.js
public/: .index.html.swp  .miserables.json.swp  index.html
public/css/: main.css
public/data/: miserables.json
public/graphs/: test1.js
public/js/: .main.js.swp  main.js  rusty_dashed.js
src/: dashboard.rs  lib.rs  server.rs  telemetry.rs  ws_server.rs
