[package]
name = "rusty_dashed"
version = "0.1.1"
authors = ["Hugo Freire <hfreire@abajar.com>"]
description = "A web dashboard for telemetry in rust apps"
license_file = "LICENSE"
repository = "https://github.com/TLmaK0/rusty_dashed"
build = "build.rs"

[dependencies]
mio = "0.6"
staticfile = "0.3.1"
iron = "0.4.0"
hyper = "0.9.13"
mount = "0.2.1"
phf = "0.7.12"
includedir = "0.2.0"
ws = "0.5.3"
lazy_static = "0.1.16"
rand = "0.3"

[build-dependencies]
includedir_codegen = "0.2.0"

[features]
default = ["serve_static"]

serve_static = []

debug_static = []

telemetry = []
