[package]
name = "rusty_dashed"
version = "0.3.0"
authors = ["Hugo Freire <hfreire@abajar.com>"]
description = "A web dashboard for telemetry in rust apps"
license-file = "LICENSE"
repository = "https://github.com/TLmaK0/rusty_dashed"
edition = "2018"
build = "build.rs"

[dependencies]
tiny_http = "0.12"
rust-embed = "8"
ws = "0.9"
lazy_static = "1"
rand = "0.8"

[build-dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["serve_static"]

serve_static = []

debug_static = []

telemetry = []
